syntax = "proto3";

package storageapplication;

option go_package = "portal-application/pkg/pb;pb";

message StorageUserRequest {
    int64 id = 1;
    string command = 2;
    string value = 3;
    string uptime = 4;
}

message StorageUserResponse {
  string value = 1;
}

message CommandInfoUserRequest {
    StorageUserRequest userrequest = 1;
}

message CommandInfoUserResponse {
    StorageUserResponse userresponse = 1;
}

message CommandUptimeUserRequest {
    StorageUserRequest userrequest = 1;
}

message CommandUptimeUserResponse {
    StorageUserResponse userresponse = 1;
}

message CommandResetUserRequest {
    StorageUserRequest userrequest = 1;
}

message CommandResetUserResponse {
    StorageUserResponse userresponse = 1;
}

service StorageService {
  rpc CommandInfo (CommandInfoUserRequest) returns (CommandInfoUserResponse);
  rpc CommandUptime (CommandUptimeUserRequest) returns (CommandUptimeUserResponse);
  rpc CommandReset (CommandResetUserRequest) returns (CommandResetUserResponse);
}
